# Personal_Portfolio

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: config.py  main.py
apps/backend/app/core/rag/: chunking.py
apps/backend/app/docs/: about.md  career_goals.md  certifications.md  contact_details.md  interview_faq.md  learning_journey.md  personality_workstyle.md  resume.md  skills.md
apps/backend/app/docs/projects/: digivote.md  nexus.md  trackr.md  vjit-scheduler.md  voting-system.md
apps/backend/app/routers/: ai.py  contact.py  resume.py
apps/backend/app/services/: rag_service.py
apps/backend/migrations/: 001_initial_schema.sql
apps/backend/nexus_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/frontend/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/src/: main.tsx
apps/frontend/src/app/: App.tsx  routes.tsx
apps/frontend/src/constants/: ai.ts  navigation.ts
apps/frontend/src/data/: projects.ts
apps/frontend/src/hooks/: useBootPreference.ts  usePrefersReducedMotion.ts
apps/frontend/src/lib/: animations.ts  api.ts
apps/frontend/src/pages/: AboutPage.tsx  AssistantPage.tsx  ContactPage.tsx  DashboardPage.tsx  FuturePlaceholderPage.tsx  NotFoundPage.tsx  ProjectDetailPage.tsx  ProjectsIndexPage.tsx  ResumePage.tsx
apps/frontend/src/store/: useUiStore.ts
apps/frontend/src/styles/: globals.css  tokens.css
apps/frontend/src/types/: project.ts
docs/: architecture.md
(+18 files in other folders)
