[project]
name = "nexus-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for NEXUS"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "asyncpg>=0.30.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.ruff]
line-length = 100
target-version = "py312"
